--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.session.store-type=none
+spring.profiles.active=prod
 logging.level.org.springframework.web: DEBUG
